Fix vertical alignment on /doc/first_steps/persistence/configure

--- a/wiki/src/local.css
+++ b/wiki/src/local.css
@@ -979,7 +979,6 @@ div.icon div.text {
     top: 0;
     display: inline-block;
     vertical-align: top;
-    padding-top: 1em;
     margin-left: 1em;
 }
 
